force-app/main/default/objects/Contact/fields/Doctor_Image__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Image__c</fullName>
    <formula>IMAGE( Photo_URL__c ,  FirstName +&apos; &apos; + LastName  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Image</label>
    <type>Text</type>
</CustomField>