force-app/main/default/objects/Contact/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <label>Photo URL</label>
    <type>Url</type>
</CustomField>