force-app/main/default/objects/Contact/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Doctors Medical Specialization</description>
    <label>Specialization</label>
    <referenceTo>Specialization__c</referenceTo>
    <relationshipLabel>Doctors</relationshipLabel>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>