force-app/main/default/objects/Contact/recordTypes/Client_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Client_Record_Type</fullName>
    <active>true</active>
    <label>Client Record Type</label>
</RecordType>