force-app/main/default/objects/Contact/recordTypes/Doctor_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Doctor_Record_Type</fullName>
    <active>true</active>
    <label>Doctor Record Type</label>
</RecordType>